# vn-workshop-2026

climate-tools/: .env.example  .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  run_all_imports.sh
climate-tools/docs/: index.md
climate-tools/docs/guides/: dhis2-client.md  dhis2eo.md  setup.md
climate-tools/examples/: benchmark_download_speeds.py
climate-tools/examples/dhis2/: 01_check_connection.py  02_browse_org_units.py  03_plot_org_units.py  04_list_users.py  05_search_data_elements.py  06_explore_data_sets.py  07_query_analytics.py  08_push_data_value.py  09_get_data_values.py  10_explore_categories.py  11_org_unit_tree.py  12_analytics_to_dataframe.py  13_plot_analytics.py  14_create_metadata.py
climate-tools/examples/dhis2eo/: get_chirps.py  get_era5.py  get_worldpop1.py  get_worldpop2.py  get_worldpop2_agesex.py  pipeline_chirps.py  pipeline_era5.py  pipeline_worldpop.py  pipeline_worldpop2.py  pipeline_worldpop2_sex.py  pipeline_worldpop_sex.py  query_climate_analytics.py
climate-tools/src/climate_tools/: __init__.py  config.py  schemas.py
climate-tools/tests/: test_config.py
climate-tools/tools/: nc-to-png
dhis2-fhir/: .gitignore  CLAUDE.md  Makefile  README.md  mkdocs.yml  pyproject.toml
dhis2-fhir/docs/: exercises.md  glossary.md  introduction.md
dhis2-fhir/docs/ch01-fhir-overview/: bundle.md  data-types.md  encounter.md  episodeofcare.md  index.md  observation.md  organization-location.md  patient.md  questionnaire.md  resources.md
dhis2-fhir/docs/ch02-fsh-introduction/: index.md  syntax-basics.md
dhis2-fhir/docs/ch03-dev-environment/: index.md  project-structure.md
dhis2-fhir/docs/ch04-fsh-101/: aliases.md  common-mistakes.md  extensions.md  index.md  instances.md  invariants.md  logical-models.md  mappings.md  profiles.md  rulesets.md  slicing.md  valuesets-codesystems.md
dhis2-fhir/docs/ch05-first-ig/: index.md  publishing.md  sushi-config.md
dhis2-fhir/docs/ch06-dhis2-fhir/: dhis2-concepts.md  index.md  mapping-concepts.md
dhis2-fhir/docs/ch07-measure/: dhis2-patterns.md  fsh-examples.md  index.md  measure-report.md  measure.md
dhis2-fhir/docs/ch08-ig-reference/: bundles.md  clinical-profiles.md  extensions.md  index.md  logical-models.md  measure-profiles.md  organization-profiles.md  patient-profile.md  questionnaire-profiles.md  terminology.md
dhis2-fhir/docs/ch09-renderer/: architecture.md  index.md  pydantic-models.md
dhis2-fhir/docs/ch10-validation/: index.md
dhis2-fhir/docs/ch11-ips/: examples.md  index.md  mapping.md  profiles.md  terminology.md
dhis2-fhir/docs/ch12-fhir-search/: advanced-search.md  index.md  lao-registry-patterns.md  search-basics.md  search-parameters.md
dhis2-fhir/docs/ch13-chr-service/: api-reference.md  fhir-mapping.md  index.md  profiles.md
dhis2-fhir/exercises/01-profiles/: instructions.md  solution.fsh  starter.fsh
dhis2-fhir/exercises/02-extensions/: instructions.md  solution.fsh  starter.fsh
dhis2-fhir/exercises/03-valuesets-codesystems/: instructions.md  solution.fsh  starter.fsh
dhis2-fhir/exercises/04-instances/: instructions.md  solution.fsh  starter.fsh
dhis2-fhir/exercises/05-logical-models/: instructions.md  solution.fsh  starter.fsh
dhis2-fhir/exercises/06-mappings/: instructions.md  solution.fsh  starter.fsh
dhis2-fhir/exercises/07-rulesets/: instructions.md  solution.fsh  starter.fsh
dhis2-fhir/exercises/08-aliases/: instructions.md  solution.fsh  starter.fsh
dhis2-fhir/exercises/09-invariants/: instructions.md  solution.fsh  starter.fsh
dhis2-fhir/exercises/10-slicing/: instructions.md  solution.fsh  starter.fsh
dhis2-fhir/ig/: Requirements-fromNarrative.json  ig.ini  sushi-config.yaml
dhis2-fhir/ig/input/: ignoreWarnings.txt
dhis2-fhir/ig/input/fsh/anc-lao/: examples.fsh  questionnaire.fsh  terminology.fsh
dhis2-fhir/ig/input/fsh/bundles/: anc-visit-transaction.fsh  monthly-report.fsh
dhis2-fhir/ig/input/fsh/clinical/: encounter-examples-amina.fsh  encounter-examples-john.fsh  encounter-examples.fsh  encounter.fsh  episodeofcare-examples-more.fsh  episodeofcare-examples.fsh  episodeofcare.fsh  observation-examples-amina.fsh  observation-examples-john.fsh  observation-examples.fsh  observation.fsh
dhis2-fhir/ig/input/fsh/foundation/: aliases.fsh  extensions.fsh  invariants.fsh  rulesets.fsh
dhis2-fhir/ig/input/fsh/ips/: examples-generated.fsh  gen_examples.py  profiles.fsh  terminology.fsh
dhis2-fhir/ig/input/fsh/lao/: examples.fsh  terminology.fsh
dhis2-fhir/ig/input/fsh/measure/: measure-definitions.fsh  measure-report-examples.fsh  profiles.fsh
dhis2-fhir/ig/input/fsh/models/: data-value-set.fsh  mapping-dvs-measurereport.fsh  mapping-tei-patient.fsh  (+1 more)
dhis2-fhir/ig/input/includes/: _append.fragment-css.html
dhis2-fhir/ig/input/pagecontent/: index.md
dhis2-fhir/postman/: DHIS2-FHIR-API.postman_collection.json
dhis2-fhir/presentation/: global-bottom.vue  package.json  slides.md
dhis2-fhir/presentation/slides/: 01-intro.md  02-what-is-fhir.md  03-dhis2-meets-fhir.md  04-metadata.md  05-building.md  06-lao-eir.md  07-closing.md
dhis2-fhir/src/dhis2_fhir/: app.py  fhir_api.py  loader.py  models.py  seed.py  store.py
dhis2-fhir/templates/: base.html  chr_dashboard.html  chr_eir.html  chr_register.html  chr_search.html  codesystem_detail.html  codesystem_list.html  forms_list.html  index.html  ips_list.html  ips_view.html  json_view.html  observation_form.html  organization_detail.html  organization_list.html  patient.html  patient_form.html  patient_list.html  questionnaire.html  valueset_detail.html  valueset_list.html
dhis2-fhir/tests/: conftest.py  test_e2e.py
prefect-demo/: .env.example  .gitignore  Makefile  README.md  compose.yml  pyproject.toml
prefect-demo/deployments/advanced/: Dockerfile  flow.py
prefect-demo/deployments/basics/: Dockerfile  flow.py
prefect-demo/deployments/dhis2_org_units/: Dockerfile  flow.py
prefect-demo/deployments/parallel/: Dockerfile  flow.py
(+116 files in other folders)
